2011-10-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed column 
	width in this view.
	
	Fixes: #3423546

2011-10-14  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/help/en/help_alert_macros.php,
	  include/help/ja/help_alert_macros.php: Added the new
	  _plugin_parameters_ alert macro.

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed events view sql 
	error to no admin users for bug 3422861

2011-10-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* images/vmware.png: Added forgotten file.

2011-10-10 Tomas Palacios <tomas.palacios@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Updated to provide
	additional compatibility with older versions of MySQL.

2011-10-10  Sergio Martin <sergio.martin@artica.es>

	* extensions/snmp_explorer.php: Updated missed fix in snmp explorer
	to create the modules correctly

2011-10-10  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Deleted old fix of juanma to
	refresh skins when update to fix password update bug

2011-10-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed layout in this 
	view when module data is a string.

2011-10-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_monitores.php: Fixed query to add module 
	group in the agrupation. 

2011-10-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Filter in this view is 
	kept when an agent is deleted.
	
	Fixes: #3419823

2011-10-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/group_view.php: Fixed bad style when a group's 
	modules has alerts fired.
	
	Fixes: #3419822

2011-10-06  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_main_tab.php: Added a missing help
	file.
	
2011-10-06  Koichiro Kikuchi  <koichiro@rworks.jp>
