@@ -86,7 +86,7 @@ class ViewAlerts {
 			}
 			
 			$data[] = str_replace(array('images/status_sets', '<img'), 
-				array('../images/status_sets', '<img width="15" height="15"'), ui_print_status_image($status, $title, true));
+				array('images/status_sets', '<img width="15" height="15"'), ui_print_status_image($status, $title, true));
 			
 			$table->data[] = $data;
 		}
